[package]
name = "tag_reader"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.24"
imageproc = "0.25"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
walkdir = "2.4"
ocrs = "0.12.2"
rten = { version = "0.24.0", default-features = false }
rten-imageproc = { version = "0.24.0" }
rten-tensor = { version = "0.24.0" }
regex = "1.12.3"

